--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -43,7 +44,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
