--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.derbyclient.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_05\\db\\l
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +43,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
