--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.derbyclient.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_05\\db\\l
 includes=**
 jar.compress=false
 javac.classpath=\
-
+    ${file.reference.derbyclient.jar}:\
+    ${libs.hamcrest.classpath}
     ${file.reference.derbyclient.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.hamcrest.classpath}
