--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
+
+
 language: java
 sudo: required
-before_script:
-- rm -rf test
+jdk:
+  - oraclejdk8
+  - openjdk7
+
+before_install:
+  - cd java
