--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.derbyclient.jar}:\
-    ${libs.hamcrest.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.hamcrest.classpath}
     ${file.reference.derbyclient.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.hamcrest.classpath}
