--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.derbyclient.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_05\\db\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.8.0_131\\db\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.derbyclient.jar}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.derbyclient.jar-1}
     ${file.reference.derbyclient.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.hamcrest.classpath}
