--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,16 @@ dist.jar=${dist.dir}/FioreFlowershop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.derbyclient.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_05\\db\\lib\\derbyclient.jar
-file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.8.0_131\\db\\lib\\derbyclient.jar
+file.reference.DateChooser.jar=C:\\Users\\User\\Desktop\\JDateChooser\\jdatechooser\\DateChooser.jar
+file.reference.derbyclient.jar-2=C:\\Program Files\\Java\\jdk1.8.0_151\\db\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.derbyclient.jar}:\
     ${libs.hamcrest.classpath}:\
-    ${file.reference.derbyclient.jar-1}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.derbyclient.jar-2}:\
+    ${libs.beans-binding.classpath}:\
+    ${libs.absolutelayout.classpath}
     ${file.reference.derbyclient.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.hamcrest.classpath}
